feat: update to Java 21, migrate to GraalVM with enterprise top-tier compiler
According to public benchmarks and my own experimentation, this top-tier
hot code compiler provides lower MSPTs accross the board once its higher
warm-up costs are paid.